# feedfuse

./: .dockerignore  .env  .flake8  .gitignore  .isort.cfg  .test.env  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytests.xml  test.dockerfile
app/: main.py
app/api/: deps.py  health.py
app/api/v1/: routers.py
app/api/v1/endpoints/: feeds.py  items.py  login.py  users.py
app/core/: config.py  security.py
app/crawler/: utils.py  worker.py
app/crawler/schedule_update_feed/: tasks.py
app/crawler/update_feed/: tasks.py
app/crawler/update_feed_item/: tasks.py
app/crud/: __init__.py  all_crud.py  feeds.py  items.py  read_status.py  subscription.py  users.py
app/db/: base.py  session.py
app/models/: __init__.py  feeds.py  items.py  read_status.py  subscription.py  users.py
app/schemas/: __init__.py  common_query_params.py  feeds.py  items.py  token.py  users.py
app/tests/: conftest.py  test_health.py
app/tests/api/v1/endpoints/: test_feeds.py  test_items.py  test_users.py
migrations/: env.py
migrations/versions/: 2023-04-29_init_db.py  2023-04-29_update_subscription_constraint.py  2023-04-30_add_modified_at.py  2023-05-01_init_db.py  2023-05-01_update_relation.py
